--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css">
+    
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+
 </head>
 <body>
     <header> 
@@ -97,7 +102,7 @@
 
 
        <section>
-           <h2>Our Portfolio</h2>
+            <h2>Our Portfolio</h2>
                 <ul> 
                     <li>
                     
@@ -148,7 +153,7 @@
 
 </main>
 
-<footer> 
+<footer>    
     <a href="./index.html">WebStudio</a>
 
  <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
