--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap">
+
 </head>
 <body>
     <header> 
