--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap">
 
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://fonts.gstatic.com">
 
 
 
@@ -42,9 +43,9 @@
     </header>
 
     <main> 
-       <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+       <section class="top">
+            <h1 class="slogan">Effective Solutions for Your Business</h1>
+            <button type="button" class="button">Order Service</button>
        </section>       
             
        <section>
