--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         
             <ul class="menu">
-              <li><a href="#" class="studmenu">Studio</a></li>
+              <li><a href="./index.html" class="studmenu">Studio</a></li>
               <li><a href="#" class="portmenu">Portfolio</a></li>
               <li><a href="#" class="contmenu">Contacts</a></li>
               
@@ -61,21 +61,21 @@
 
                 <ul>
                     <li>
-                        <h3>Strategy</h3>
-                        <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        <h3 class="featureshead">Strategy</h3>
+                        <p class="featurestext">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                     </li>
 
                     <li>
-                        <h3>Punctuality</h3>
-                        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        <h3 class="featureshead">Punctuality</h3>
+                        <p class="featurestext">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                     </li>
                     <li>
-                        <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        <h3 class="featureshead">Diligence</h3>
+                    <p class="featurestext">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                     </li>
                     <li>
-                        <h3>Technologies</h3>
-                        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        <h3 class="featureshead">Technologies</h3>
+                        <p class="featurestext">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                     </li>
    
                 </ul>
