--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@
 </main>
 
 <footer>    
-    <a href="./index.html">WebStudio</a>
-
+    <a href="./index.html" class="web-studio"> 
+        <span class="partlogo">web 
+            <span class="partlogo__studio">Studio</span> 
+        </span>
+    </a>
  <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
