--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         
             <ul class="menu">
               <li><a href="./index.html" class="studmenu">Studio</a></li>
-              <li><a href="#" class="portmenu">Portfolio</a></li>
-              <li><a href="#" class="contmenu">Contacts</a></li>
+              <li><a href="#" class=studmenu">Portfolio</a></li>
+              <li><a href="#" class=studmenu">Contacts</a></li>
               
             </ul>
           </nav>   
