--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
        </section>
          
        <section class="secondsect">
-            <h2 class="headh2">Our Team</h2>
+            <h2 class="headhtwo">Our Team</h2>
                 <ul> 
                     <li class="devcast">
                     
