--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         
             <ul class="menu">
               <li><a href="./index.html" class="studmenu">Studio</a></li>
-              <li><a href="" class="studmenu">Portfolio</a></li>
-              <li><a href="" class="studmenu">Contacts</a></li>
+              <li><a href="#" class="studmenu">Portfolio</a></li>
+              <li><a href="#" class="studmenu">Contacts</a></li>
               
             </ul>
           </nav>   
