--- a/index.html
+++ b/index.html
@@ -166,11 +166,7 @@
 </main>
 
 <footer class="end">    
-    <a href="./index.html" class="web-studio"> 
-        <span class="partlogo">web 
-            <span class="partlogo__studio_end">Studio</span> 
-        </span>
-    </a>
+    <a class="web-studio" href="./index.html">Web<span class="partlogosecond">Studio</span></a>
  <p class="endpage">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 
