--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           </nav>   
         <address class="contact-info">
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="phone">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
         
